testsuite/tests/builtins/list_methods/sublist/missing_low_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(l.sublist(high=1))
   │       ────────┬────────  
   │               ╰────────── Missing value for the "low" parameter
───╯
